--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="color_white">#FFFFFF</color>
     <color name="color_gray">#66000000</color>
     <color name="color_white_transparent">#80FFFFFF</color>
+
+    <color name="color_splash_screen">#390812</color>
 </resources>
